--- a/Gallery.html
+++ b/Gallery.html
@@ -6,24 +6,36 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    <title>Flarious Gallery</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
+
+    <title>Lab02_Gallery_62090500428</title>
 
     <style>
         .jumbotron {
             border: solid black 3px;
             border-radius: 25px;
+            padding-left: 5%;
             background-color: gray;
         }
+        div.jumbotron h1{
+            font-family: 'Lobster', cursive;
+        }
+        div.jumbotron p{
+            font-family: 'Comfortaa', cursive;
+            color: whitesmoke;
+        }
         body {
-            background-color: rgb(169, 126, 201);
+            background-image: url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/v462-n-130-textureidea_1.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=9465282a2b0a375f4f5b120d7bbad882");
         }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1>My (MEME) Gallery</h1>
-            <p>The ordinary photo gallery</p>
+            <h1>My (Meme) Gallery</h1>
+            <p>The ordinary <strong>meme</strong> gallery</p>
         </div>
     </div>
     <div class="row">
